// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DailyStepsScreen should render FitKit permissions screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    copy={
      Object {
        "copy": Object {
          "permission": "",
          "permissionCta": "",
        },
        "popUpCopy": Object {
          "leaderboardHeading": "",
          "leaderboardSubheading": "",
          "surgeHeading": "",
          "surgeSubheading": "",
        },
      }
    }
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={false}
    isDoneToday={false}
    isLoading={false}
    isOnSurge={false}
    isShowingPassiveMeditation={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    meditation={0}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    shouldDisplaySurge={false}
    steps={0}
    theme={
      Object {
        "centredScreen": Object {
          "offline": Object {
            "image": "gray_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
          "online": Object {
            "image": "large_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
        },
        "hasWhiteGlow": false,
        "isLight": false,
        "navBar": Object {
          "offline": "light",
          "online": "darker",
        },
        "streakType": "forest",
        "textStyle": Object {
          "color": "#333333",
        },
        "topBarType": "default",
      }
    }
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <CenteredScreen
        footerImage="gray_forest"
        style={
          Object {
            "backgroundColor": "#FFF",
          }
        }
        testID="DAILY_STEPS_SCREEN"
      >
        <View
          style={
            Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />
        </View>
        <Pad
          height={60}
        />
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacityWithState>
        <DailyStepsFitKitAuthorise
          copy={
            Object {
              "permission": "",
              "permissionCta": "",
            }
          }
          onPress={[MockFunction]}
        />
        <View
          style={
            Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>
      </CenteredScreen>,
      "delay": 0,
      "direction": "normal",
      "duration": 750,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": Object {
        "flex": 1,
      },
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsFitKitAuthorise
            copy={
              Object {
                "permission": "",
                "permissionCta": "",
              }
            }
            onPress={[MockFunction]}
          />,
          null,
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "gray_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
        "testID": "DAILY_STEPS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />,
            "style": Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
              "type": "default",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "copy": Object {
              "permission": "",
              "permissionCta": "",
            },
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <CenteredScreen
          footerImage="gray_forest"
          style={
            Object {
              "backgroundColor": "#FFF",
            }
          }
          testID="DAILY_STEPS_SCREEN"
        >
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>
          <Pad
            height={60}
          />
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacityWithState>
          <DailyStepsFitKitAuthorise
            copy={
              Object {
                "permission": "",
                "permissionCta": "",
              }
            }
            onPress={[MockFunction]}
          />
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>
        </CenteredScreen>,
        "delay": 0,
        "direction": "normal",
        "duration": 750,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": Object {
          "flex": 1,
        },
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "left": 0,
                  "paddingBottom": 16,
                  "paddingTop": 40,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />
            </View>,
            <Pad
              height={60}
            />,
            <TouchableOpacityWithState
              activeOpacity={1}
              onPress={[MockFunction]}
            >
              <YuCoin
                hasWhiteGlow={false}
                isGrayScale={true}
                isLoading={false}
              />
            </TouchableOpacityWithState>,
            <DailyStepsFitKitAuthorise
              copy={
                Object {
                  "permission": "",
                  "permissionCta": "",
                }
              }
              onPress={[MockFunction]}
            />,
            null,
            <View
              style={
                Object {
                  "bottom": 20,
                  "paddingBottom": 30,
                  "position": "absolute",
                }
              }
            >
              <NavBar
                activeIndex={0}
                colour="light"
                hasNotification={false}
                labels={Array []}
              />
            </View>,
          ],
          "footerImage": "gray_forest",
          "style": Object {
            "backgroundColor": "#FFF",
          },
          "testID": "DAILY_STEPS_SCREEN",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />,
              "style": Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 60,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 1,
              "children": <YuCoin
                hasWhiteGlow={false}
                isGrayScale={true}
                isLoading={false}
              />,
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "hasWhiteGlow": false,
                "isGrayScale": true,
                "isLoading": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "copy": Object {
                "permission": "",
                "permissionCta": "",
              },
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <NavBar
                activeIndex={0}
                colour="light"
                hasNotification={false}
                labels={Array []}
              />,
              "style": Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeIndex": 0,
                "colour": "light",
                "hasNotification": false,
                "labels": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render FitKit unavailable screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    copy={
      Object {
        "copy": Object {
          "permission": "",
          "permissionCta": "",
        },
        "popUpCopy": Object {
          "leaderboardHeading": "",
          "leaderboardSubheading": "",
          "surgeHeading": "",
          "surgeSubheading": "",
        },
      }
    }
    currentStreak={0}
    fitKitAvailable={false}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnSurge={false}
    isShowingPassiveMeditation={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    meditation={0}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    shouldDisplaySurge={false}
    steps={0}
    theme={
      Object {
        "centredScreen": Object {
          "offline": Object {
            "image": "gray_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
          "online": Object {
            "image": "large_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
        },
        "hasWhiteGlow": false,
        "isLight": false,
        "navBar": Object {
          "offline": "light",
          "online": "darker",
        },
        "streakType": "forest",
        "textStyle": Object {
          "color": "#333333",
        },
        "topBarType": "default",
      }
    }
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <CenteredScreen
        footerImage="large_forest"
        style={
          Object {
            "backgroundColor": "#FFF",
          }
        }
        testID="DAILY_STEPS_SCREEN"
      >
        <View
          style={
            Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />
        </View>
        <Pad
          height={60}
        />
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacityWithState>
        <DailyStepsFitKitUnavailable />
        <View
          style={
            Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>
      </CenteredScreen>,
      "delay": 0,
      "direction": "normal",
      "duration": 750,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": Object {
        "flex": 1,
      },
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsFitKitUnavailable />,
          null,
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
        "testID": "DAILY_STEPS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />,
            "style": Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
              "type": "default",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <CenteredScreen
          footerImage="large_forest"
          style={
            Object {
              "backgroundColor": "#FFF",
            }
          }
          testID="DAILY_STEPS_SCREEN"
        >
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>
          <Pad
            height={60}
          />
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>
          <DailyStepsFitKitUnavailable />
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>
        </CenteredScreen>,
        "delay": 0,
        "direction": "normal",
        "duration": 750,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": Object {
          "flex": 1,
        },
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "left": 0,
                  "paddingBottom": 16,
                  "paddingTop": 40,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />
            </View>,
            <Pad
              height={60}
            />,
            <TouchableOpacityWithState
              activeOpacity={1}
              onPress={[MockFunction]}
            >
              <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={false}
              />
            </TouchableOpacityWithState>,
            <DailyStepsFitKitUnavailable />,
            null,
            <View
              style={
                Object {
                  "bottom": 20,
                  "paddingBottom": 30,
                  "position": "absolute",
                }
              }
            >
              <NavBar
                activeIndex={0}
                colour="light"
                hasNotification={false}
                labels={Array []}
              />
            </View>,
          ],
          "footerImage": "large_forest",
          "style": Object {
            "backgroundColor": "#FFF",
          },
          "testID": "DAILY_STEPS_SCREEN",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />,
              "style": Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 60,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 1,
              "children": <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={false}
              />,
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "hasWhiteGlow": false,
                "isGrayScale": false,
                "isLoading": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <NavBar
                activeIndex={0}
                colour="light"
                hasNotification={false}
                labels={Array []}
              />,
              "style": Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeIndex": 0,
                "colour": "light",
                "hasNotification": false,
                "labels": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render daily streak 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    copy={
      Object {
        "copy": Object {
          "permission": "",
          "permissionCta": "",
        },
        "popUpCopy": Object {
          "leaderboardHeading": "",
          "leaderboardSubheading": "",
          "surgeHeading": "",
          "surgeSubheading": "",
        },
      }
    }
    currentStreak={0}
    displayStreak={true}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnSurge={false}
    isShowingPassiveMeditation={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    meditation={0}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    shouldDisplaySurge={false}
    steps={0}
    theme={
      Object {
        "centredScreen": Object {
          "offline": Object {
            "image": "gray_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
          "online": Object {
            "image": "large_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
        },
        "hasWhiteGlow": false,
        "isLight": false,
        "navBar": Object {
          "offline": "light",
          "online": "darker",
        },
        "streakType": "forest",
        "textStyle": Object {
          "color": "#333333",
        },
        "topBarType": "default",
      }
    }
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <CenteredScreen
        footerImage="large_forest"
        style={
          Object {
            "backgroundColor": "#FFF",
          }
        }
        testID="DAILY_STEPS_SCREEN"
      >
        <View
          style={
            Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />
        </View>
        <Pad
          height={80}
        />
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacityWithState>
        <DailyStepsOnline
          coinsToday={0}
          isShowingPassiveMeditation={true}
          onCtaPress={[MockFunction]}
          showCounter={false}
          steps={0}
          textStyle={
            Object {
              "color": "#333333",
            }
          }
        />
        <Streak
          currentStreak={0}
          isFinished={false}
          isOnline={true}
          maxStreak={4}
          onPress={[MockFunction]}
          type="forest"
        />
        <View
          style={
            Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </View>
      </CenteredScreen>,
      "delay": 0,
      "direction": "normal",
      "duration": 750,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": Object {
        "flex": 1,
      },
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>,
          <Pad
            height={80}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsOnline
            coinsToday={0}
            isShowingPassiveMeditation={true}
            onCtaPress={[MockFunction]}
            showCounter={false}
            steps={0}
            textStyle={
              Object {
                "color": "#333333",
              }
            }
          />,
          <Streak
            currentStreak={0}
            isFinished={false}
            isOnline={true}
            maxStreak={4}
            onPress={[MockFunction]}
            type="forest"
          />,
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
        "testID": "DAILY_STEPS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />,
            "style": Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
              "type": "default",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "isShowingPassiveMeditation": true,
            "mindfulSeconds": undefined,
            "onCtaPress": [MockFunction],
            "showCounter": false,
            "steps": 0,
            "textStyle": Object {
              "color": "#333333",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "currentStreak": 0,
            "isFinished": false,
            "isOnline": true,
            "maxStreak": 4,
            "onPress": [MockFunction],
            "type": "forest",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <CenteredScreen
          footerImage="large_forest"
          style={
            Object {
              "backgroundColor": "#FFF",
            }
          }
          testID="DAILY_STEPS_SCREEN"
        >
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>
          <Pad
            height={80}
          />
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>
          <DailyStepsOnline
            coinsToday={0}
            isShowingPassiveMeditation={true}
            onCtaPress={[MockFunction]}
            showCounter={false}
            steps={0}
            textStyle={
              Object {
                "color": "#333333",
              }
            }
          />
          <Streak
            currentStreak={0}
            isFinished={false}
            isOnline={true}
            maxStreak={4}
            onPress={[MockFunction]}
            type="forest"
          />
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>
        </CenteredScreen>,
        "delay": 0,
        "direction": "normal",
        "duration": 750,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": Object {
          "flex": 1,
        },
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "left": 0,
                  "paddingBottom": 16,
                  "paddingTop": 40,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />
            </View>,
            <Pad
              height={80}
            />,
            <TouchableOpacityWithState
              activeOpacity={1}
              onPress={[MockFunction]}
            >
              <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={false}
              />
            </TouchableOpacityWithState>,
            <DailyStepsOnline
              coinsToday={0}
              isShowingPassiveMeditation={true}
              onCtaPress={[MockFunction]}
              showCounter={false}
              steps={0}
              textStyle={
                Object {
                  "color": "#333333",
                }
              }
            />,
            <Streak
              currentStreak={0}
              isFinished={false}
              isOnline={true}
              maxStreak={4}
              onPress={[MockFunction]}
              type="forest"
            />,
            <View
              style={
                Object {
                  "bottom": 20,
                  "paddingBottom": 30,
                  "position": "absolute",
                }
              }
            >
              <NavBar
                activeIndex={0}
                colour="darker"
                hasNotification={false}
                labels={Array []}
              />
            </View>,
          ],
          "footerImage": "large_forest",
          "style": Object {
            "backgroundColor": "#FFF",
          },
          "testID": "DAILY_STEPS_SCREEN",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />,
              "style": Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 80,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 1,
              "children": <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={false}
              />,
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "hasWhiteGlow": false,
                "isGrayScale": false,
                "isLoading": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "coinsToday": 0,
              "isShowingPassiveMeditation": true,
              "mindfulSeconds": undefined,
              "onCtaPress": [MockFunction],
              "showCounter": false,
              "steps": 0,
              "textStyle": Object {
                "color": "#333333",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "currentStreak": 0,
              "isFinished": false,
              "isOnline": true,
              "maxStreak": 4,
              "onPress": [MockFunction],
              "type": "forest",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <NavBar
                activeIndex={0}
                colour="darker"
                hasNotification={false}
                labels={Array []}
              />,
              "style": Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeIndex": 0,
                "colour": "darker",
                "hasNotification": false,
                "labels": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    copy={
      Object {
        "copy": Object {
          "permission": "",
          "permissionCta": "",
        },
        "popUpCopy": Object {
          "leaderboardHeading": "",
          "leaderboardSubheading": "",
          "surgeHeading": "",
          "surgeSubheading": "",
        },
      }
    }
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnSurge={false}
    isShowingPassiveMeditation={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    meditation={0}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    shouldDisplaySurge={false}
    steps={0}
    theme={
      Object {
        "centredScreen": Object {
          "offline": Object {
            "image": "gray_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
          "online": Object {
            "image": "large_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
        },
        "hasWhiteGlow": false,
        "isLight": false,
        "navBar": Object {
          "offline": "light",
          "online": "darker",
        },
        "streakType": "forest",
        "textStyle": Object {
          "color": "#333333",
        },
        "topBarType": "default",
      }
    }
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <CenteredScreen
        footerImage="large_forest"
        style={
          Object {
            "backgroundColor": "#FFF",
          }
        }
        testID="DAILY_STEPS_SCREEN"
      >
        <View
          style={
            Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />
        </View>
        <Pad
          height={60}
        />
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacityWithState>
        <DailyStepsOnline
          coinsToday={0}
          isShowingPassiveMeditation={true}
          onCtaPress={[MockFunction]}
          showCounter={false}
          steps={0}
          textStyle={
            Object {
              "color": "#333333",
            }
          }
        />
        <View
          style={
            Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </View>
      </CenteredScreen>,
      "delay": 0,
      "direction": "normal",
      "duration": 750,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": Object {
        "flex": 1,
      },
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsOnline
            coinsToday={0}
            isShowingPassiveMeditation={true}
            onCtaPress={[MockFunction]}
            showCounter={false}
            steps={0}
            textStyle={
              Object {
                "color": "#333333",
              }
            }
          />,
          null,
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
        "testID": "DAILY_STEPS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />,
            "style": Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
              "type": "default",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "isShowingPassiveMeditation": true,
            "mindfulSeconds": undefined,
            "onCtaPress": [MockFunction],
            "showCounter": false,
            "steps": 0,
            "textStyle": Object {
              "color": "#333333",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <CenteredScreen
          footerImage="large_forest"
          style={
            Object {
              "backgroundColor": "#FFF",
            }
          }
          testID="DAILY_STEPS_SCREEN"
        >
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>
          <Pad
            height={60}
          />
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>
          <DailyStepsOnline
            coinsToday={0}
            isShowingPassiveMeditation={true}
            onCtaPress={[MockFunction]}
            showCounter={false}
            steps={0}
            textStyle={
              Object {
                "color": "#333333",
              }
            }
          />
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>
        </CenteredScreen>,
        "delay": 0,
        "direction": "normal",
        "duration": 750,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": Object {
          "flex": 1,
        },
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "left": 0,
                  "paddingBottom": 16,
                  "paddingTop": 40,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />
            </View>,
            <Pad
              height={60}
            />,
            <TouchableOpacityWithState
              activeOpacity={1}
              onPress={[MockFunction]}
            >
              <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={false}
              />
            </TouchableOpacityWithState>,
            <DailyStepsOnline
              coinsToday={0}
              isShowingPassiveMeditation={true}
              onCtaPress={[MockFunction]}
              showCounter={false}
              steps={0}
              textStyle={
                Object {
                  "color": "#333333",
                }
              }
            />,
            null,
            <View
              style={
                Object {
                  "bottom": 20,
                  "paddingBottom": 30,
                  "position": "absolute",
                }
              }
            >
              <NavBar
                activeIndex={0}
                colour="darker"
                hasNotification={false}
                labels={Array []}
              />
            </View>,
          ],
          "footerImage": "large_forest",
          "style": Object {
            "backgroundColor": "#FFF",
          },
          "testID": "DAILY_STEPS_SCREEN",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />,
              "style": Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 60,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 1,
              "children": <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={false}
              />,
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "hasWhiteGlow": false,
                "isGrayScale": false,
                "isLoading": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "coinsToday": 0,
              "isShowingPassiveMeditation": true,
              "mindfulSeconds": undefined,
              "onCtaPress": [MockFunction],
              "showCounter": false,
              "steps": 0,
              "textStyle": Object {
                "color": "#333333",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <NavBar
                activeIndex={0}
                colour="darker"
                hasNotification={false}
                labels={Array []}
              />,
              "style": Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeIndex": 0,
                "colour": "darker",
                "hasNotification": false,
                "labels": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render loading screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    copy={
      Object {
        "copy": Object {
          "permission": "",
          "permissionCta": "",
        },
        "popUpCopy": Object {
          "leaderboardHeading": "",
          "leaderboardSubheading": "",
          "surgeHeading": "",
          "surgeSubheading": "",
        },
      }
    }
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={true}
    isOnSurge={false}
    isShowingPassiveMeditation={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    meditation={0}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    shouldDisplaySurge={false}
    steps={0}
    theme={
      Object {
        "centredScreen": Object {
          "offline": Object {
            "image": "gray_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
          "online": Object {
            "image": "large_forest",
            "style": Object {
              "backgroundColor": "#FFF",
            },
          },
        },
        "hasWhiteGlow": false,
        "isLight": false,
        "navBar": Object {
          "offline": "light",
          "online": "darker",
        },
        "streakType": "forest",
        "textStyle": Object {
          "color": "#333333",
        },
        "topBarType": "default",
      }
    }
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <CenteredScreen
        footerImage="large_forest"
        style={
          Object {
            "backgroundColor": "#FFF",
          }
        }
        testID="DAILY_STEPS_SCREEN"
      >
        <View
          style={
            Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />
        </View>
        <Pad
          height={60}
        />
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={true}
          />
        </TouchableOpacityWithState>
        <DailyStepsLoading />
        <View
          style={
            Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </View>
      </CenteredScreen>,
      "delay": 0,
      "direction": "normal",
      "duration": 750,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": Object {
        "flex": 1,
      },
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={true}
            />
          </TouchableOpacityWithState>,
          <DailyStepsLoading />,
          null,
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
        "testID": "DAILY_STEPS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />,
            "style": Object {
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
              "type": "default",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={true}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 20,
              "paddingBottom": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <CenteredScreen
          footerImage="large_forest"
          style={
            Object {
              "backgroundColor": "#FFF",
            }
          }
          testID="DAILY_STEPS_SCREEN"
        >
          <View
            style={
              Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
              type="default"
            />
          </View>
          <Pad
            height={60}
          />
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={true}
            />
          </TouchableOpacityWithState>
          <DailyStepsLoading />
          <View
            style={
              Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>
        </CenteredScreen>,
        "delay": 0,
        "direction": "normal",
        "duration": 750,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": Object {
          "flex": 1,
        },
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "left": 0,
                  "paddingBottom": 16,
                  "paddingTop": 40,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />
            </View>,
            <Pad
              height={60}
            />,
            <TouchableOpacityWithState
              activeOpacity={1}
              onPress={[MockFunction]}
            >
              <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={true}
              />
            </TouchableOpacityWithState>,
            <DailyStepsLoading />,
            null,
            <View
              style={
                Object {
                  "bottom": 20,
                  "paddingBottom": 30,
                  "position": "absolute",
                }
              }
            >
              <NavBar
                activeIndex={0}
                colour="darker"
                hasNotification={false}
                labels={Array []}
              />
            </View>,
          ],
          "footerImage": "large_forest",
          "style": Object {
            "backgroundColor": "#FFF",
          },
          "testID": "DAILY_STEPS_SCREEN",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
                type="default"
              />,
              "style": Object {
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 60,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 1,
              "children": <YuCoin
                hasWhiteGlow={false}
                isGrayScale={false}
                isLoading={true}
              />,
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "hasWhiteGlow": false,
                "isGrayScale": false,
                "isLoading": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <NavBar
                activeIndex={0}
                colour="darker"
                hasNotification={false}
                labels={Array []}
              />,
              "style": Object {
                "bottom": 20,
                "paddingBottom": 30,
                "position": "absolute",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeIndex": 0,
                "colour": "darker",
                "hasNotification": false,
                "labels": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
